# storage/api-docs/api-docs.json
@@ -502,6 +502,83 @@
                 }
             }
         },
+        "/api/v1/cybersource/redirto": {
+            "post": {
+                "tags": [
+                    "Payment API"
+                ],
+                "description": "return reqeust from Cybersource",
+                "operationId": "0df7e2cbb4086bf068e3400dc6c0264a",
+                "parameters": [
+                    {
+                        "name": "t_id",
+                        "in": "query",
+                        "description": "transaction id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": "10000"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "transaction created",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error: bad request"
+                    }
+                }
+            }
+        },
+        "/api/v1/cybersource/notify": {
+            "post": {
+                "tags": [
+                    "Payment API"
+                ],
+                "description": "return reqeust from Cybersource",
+                "operationId": "b012762af83e7fbe52ac76421cb347a2",
+                "responses": {
+                    "200": {
+                        "description": "transaction created",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error: bad request"
+                    }
+                }
+            }
+        },
+        "/api/v1/cybersource/return": {
+            "post": {
+                "tags": [
+                    "Payment API"
+                ],
+                "description": "return reqeust from Cybersource",
+                "responses": {
+                    "200": {
+                        "description": "transaction created",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error: bad request"
+                    }
+                }
+            }
+        },
         "/api/v1/fawry/redirto": {
             "post": {
                 "tags": [
@@ -1278,6 +1355,31 @@
                 }
             }
         },
+        "/api/v1/payment-gateway-field-list": {
+            "get": {
+                "tags": [
+                    "Payment API"
+                ],
+                "description": "Get field details for all payment accounts.",
+                "operationId": "45c70dacf7d2aa210a543f5ba2934f6d",
+                "responses": {
+                    "200": {
+                        "description": "get the payment_accounts information",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error: bad request"
+                    },
+                    "404": {
+                        "description": "payment_accounts not found"
+                    }
+                }
+            }
+        },
         "/api/v1/payment-account/{pa_id}": {
             "get": {
                 "tags": [
@@ -1377,6 +1479,93 @@
                         "description": "Error: bad request"
                     }
                 }
+            },
+            "post": {
+                "tags": [
+                    "Payment API"
+                ],
+                "description": "add exists payment account",
+                "operationId": "632c1fd8cfb6135ed76757ab1be46ece",
+                "parameters": [
+                    {
+                        "name": "pa_xref_psp_id",
+                        "in": "query",
+                        "description": "payment_service_providers id",
+                        "required": true,
+                        "schema": {
+                            "type": "number",
+                            "example": "2"
+                        }
+                    },
+                    {
+                        "name": "pa_name",
+                        "in": "query",
+                        "description": "payment_accounts name",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "alipay cnBSJ2be prod"
+                        }
+                    },
+                    {
+                        "name": "pa_type",
+                        "in": "query",
+                        "description": "payment_type option",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "prod, sandbox"
+                        }
+                    },
+                    {
+                        "name": "pa_info",
+                        "in": "query",
+                        "description": "payment_accounts pa_info.",
+                        "required": true,
+                        "schema": {
+                            "type": "json",
+                            "example": ""
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "return upload success",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error: bad request"
+                    }
+                }
+            }
+        },
+        "/api/v1/payment-service-providers": {
+            "get": {
+                "tags": [
+                    "Payment API"
+                ],
+                "description": "get the payment_service_providers details",
+                "operationId": "c9cbb956343dc66f71b80b5a215d106b",
+                "responses": {
+                    "200": {
+                        "description": "get the payment_service_providers  information",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error: bad request"
+                    },
+                    "404": {
+                        "description": "payment_service_providers not found"
+                    }
+                }
             }
         },
         "/api/v1/payment-configurations-list": {
@@ -1410,7 +1599,183 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "payment_accounts update success",
+                        "description": "payment_configurations update success",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error: bad request"
+                    }
+                }
+            }
+        },
+        "/api/v1/location-config": {
+            "get": {
+                "tags": [
+                    "Payment API"
+                ],
+                "description": "Get the issuer exists payment-config",
+                "operationId": "abddb96e23194a1cd426ae5c052bd187",
+                "parameters": [
+                    {
+                        "name": "pc_id",
+                        "in": "query",
+                        "description": "payment_configurations",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": "10"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "get the paymentgateway result list",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error: bad request"
+                    }
+                }
+            }
+        },
+        "/api/v1/payment-config": {
+            "post": {
+                "tags": [
+                    "Payment API"
+                ],
+                "description": "add exists payment config",
+                "operationId": "b398b51f7e88b5a97506b7f2d4c0ac03",
+                "parameters": [
+                    {
+                        "name": "pc_id",
+                        "in": "query",
+                        "description": "payment_configurations id",
+                        "required": true,
+                        "schema": {
+                            "type": "number",
+                            "example": "123"
+                        }
+                    },
+                    {
+                        "name": "pa_id",
+                        "in": "query",
+                        "description": "payment_accounts id",
+                        "required": true,
+                        "schema": {
+                            "type": "number",
+                            "example": "123"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "return upload success",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error: bad request"
+                    }
+                }
+            }
+        },
+        "/api/v1/payment-configurations": {
+            "post": {
+                "tags": [
+                    "Payment API"
+                ],
+                "description": "create a payment_configurations",
+                "operationId": "374f58df9bdcdefc30683484766d4aea",
+                "parameters": [
+                    {
+                        "name": "client",
+                        "in": "query",
+                        "description": "define which client you want to fetch",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "de"
+                        }
+                    },
+                    {
+                        "name": "country",
+                        "in": "query",
+                        "description": "define which country you want to fetch",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "eg"
+                        }
+                    },
+                    {
+                        "name": "city",
+                        "in": "query",
+                        "description": "define which city you want to fetch",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "CAI"
+                        }
+                    },
+                    {
+                        "name": "service",
+                        "in": "query",
+                        "description": "payment_configurations pc_service",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "tls"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "payment_configurations create success",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error: bad request"
+                    }
+                }
+            }
+        },
+        "/api/v1/location-available-accounts": {
+            "get": {
+                "tags": [
+                    "Payment API"
+                ],
+                "description": "Get the paymentgateway list",
+                "operationId": "b4d03e00386f990f575d09d9ebe7b279",
+                "parameters": [
+                    {
+                        "name": "pc_id",
+                        "in": "query",
+                        "description": "payment_configurations",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": "10"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "get the paymentgateway result list",
                         "content": {
                             "application/json": {
                                 "schema": {}
@@ -1766,7 +2131,7 @@
                 "tags": [
                     "Payment API"
                 ],
-                "description": "upload csv file to table recommendataion_config",
+                "description": "upload csv file to table recommendation_config",
                 "operationId": "955fb9f69169335389f3b82c3516bb2f",
                 "parameters": [
                     {
@@ -1776,7 +2141,7 @@
                         "required": true,
                         "schema": {
                             "type": "string",
-                            "example": "recommendataion_config.csv"
+                            "example": "recommendation_config.csv"
                         }
                     },
                     {
@@ -1826,7 +2191,7 @@
                     {
                         "name": "limit",
                         "in": "query",
-                        "description": "number of recommendataion_config, default for 10",
+                        "description": "number of recommendation_config, default for 10",
                         "required": false,
                         "schema": {
                             "type": "integer",
@@ -2541,6 +2906,16 @@
                         "schema": {
                             "type": "string",
                             "example": "card"
+                        }
+                    },
+                    {
+                        "name": "t_expiration",
+                        "in": "query",
+                        "description": "tls citizen appointment time(min)",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": "30"
                         }
                     },
                     {
